# cpp-project-template

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  conanfile.txt  init_build.sh  make_clean.sh
src/: CMakeLists.txt  cmakevars.h.in  main.cpp
